--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,8 @@
         </activity>
         <activity android:name=".activity.SettingsActivity"
             android:parentActivityName=".activity.MainActivity" />
+        <activity android:name=".activity.RacesActivity"
+            android:parentActivityName=".activity.MainActivity" />
     </application>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
